--- a/site.css
+++ b/site.css
@@ -53,26 +53,38 @@ table.greenTable thead th:first-child {
   border-left: none;
 }
 
-table.greenTable tfoot {
-  font-size: 13px;
+
+table.greenTable2 {
+  font-family: "Moolboran", serif;
   font-weight: bold;
-  color: #F0F0F0;
-  background: #006400;
-  background: -moz-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #006400 100%);
-  background: -webkit-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #006400 100%);
-  background: linear-gradient(to bottom, #5baf6b 0%, #3a9e4d 66%, #006400 100%);
-  border-top: 1px solid #006400;
+  border: 4px solid #006400;
+  background-color: #D4EED1;
+  width: 35%;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
 }
-table.greenTable tfoot td {
+
+table.greenTable2 td, table.greenTable2 th {
+  
+  padding: 6px 3px;
+}
+
+table.greenTable2 td {
+  padding: 2px 1px;
+}
+
+table.greenTable2 td.right {
+  text-align: right;
+  padding: 2px 1px;
+}
+
+table.greenTable2 td.left {
+  text-align: left;
+  padding: 2px 1px;
+}
+
+table.greenTable2 tbody td {
   font-size: 13px;
 }
-table.greenTable tfoot .links {
-  text-align: right;
-}
-table.greenTable tfoot .links a{
-  display: inline-block;
-  background: #FFFFFF;
-  color: #006400;
-  padding: 2px 8px;
-  border-radius: 5px;
-}
+
