--- a/site.css
+++ b/site.css
@@ -26,65 +26,81 @@ table.greenTable {
   width: 40%;
   text-align: center;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: 250px;
+ 
 }
-table.greenTable td, table.greenTable th {
+
+table.greenTable2 {
+  font-family: "Moolboran", serif;
+  font-weight: bold;
+  border: 6px solid #006400;
+  background-color: #D4EED1;
+  width: 40%;
+  text-align: center;
+  margin-left: auto;
+  margin-right: 250px;
+  margin-top: 50px;
+}
+
+table.greenTable td, table.greenTable th, table.greenTable2 td, table.greenTable2 th {
   border: 1px solid #006400;
   padding: 3px 2px;
 }
-table.greenTable tbody td {
+table.greenTable tbody td, table.greenTable2 tbody td {
   font-size: 13px;
 }
-table.greenTable thead {
+table.greenTable thead, table.greenTable2 thead {
   background: #006400;
   background: -moz-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #006400 100%);
   background: -webkit-linear-gradient(top, #5baf6b 0%, #3a9e4d 66%, #006400 100%);
   background: linear-gradient(to bottom, #5baf6b 0%, #3a9e4d 66%, #006400 100%);
   border-bottom: 0px solid #444444;
 }
-table.greenTable thead th {
+table.greenTable thead th, table.greenTable2 thead th {
   font-size: 19px;
   font-weight: bold;
   color: #F0F0F0;
   text-align: center;
   border-left: 2px solid #006400;
 }
-table.greenTable thead th:first-child {
+table.greenTable thead th:first-child, table.greenTable2 thead th:first-child {
   border-left: none;
 }
 
-
-table.greenTable2 {
-  font-family: "Moolboran", serif;
-  font-weight: bold;
-  border: 4px solid #006400;
-  background-color: #D4EED1;
-  width: 35%;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+body, html {
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
-table.greenTable2 td, table.greenTable2 th {
+/* The hero image */
+.hero-image {
+  /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/hero4.jpg");
+
+  /* Set a specific height */
+  height: 125%;
+
+  /* Position and center the image to scale nicely on all screens */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-attachment: fixed;
+  position: relative;
+    margin: 0px;
+    padding:0px;
+    
+}
+
+.welcome_text {
+  color: white;
+  margin: 60px;
+    padding-top: 40px;
   
-  padding: 6px 3px;
 }
 
-table.greenTable2 td {
-  padding: 2px 1px;
+.footer {
+  border: 6px solid #D4EED1;
+  background-color: #D4EED1;
+  width: 100%;
 }
-
-table.greenTable2 td.right {
-  text-align: right;
-  padding: 2px 1px;
-}
-
-table.greenTable2 td.left {
-  text-align: left;
-  padding: 2px 1px;
-}
-
-table.greenTable2 tbody td {
-  font-size: 13px;
-}
-
